# my-crew

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDOVER.md  README.md  README.vi.md  SECURITY.md  config.example.env  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: mcp-server-pins.sh  model_prices.yaml
demo/: seed_office_events.py
deploy/: backup.sh  install.sh
deploy/docker/: Dockerfile  docker-compose.yaml  my-crew.env.example
deploy/launchd/: com.mpm.service.plist  com.mpm.web.plist  install.sh  run-report.sh
docs/: action-gateway-explainer.md  code-standards.md  codebase-summary.md  deployment-guide.md  deployment-guide.vi.md  design-guidelines.md  huong-dan-su-dung.md  project-changelog.md  project-overview-pdr.md  project-roadmap.md  releasing.md  system-architecture.md  uat-theo-user-story.md  user-guide.md
docs/journals/: 260703-v6-m14a-ceo-chat-ops.md  260704-v6-m15a-watch-task.md  260704-v7-m17-setup-wizard.md  260704-v7-m18a-agent-studio-telegram.md  260704-v7-m19-company-docs.md  260704-v7-m20-ceo-first-nav.md  260704-v8-m22-multi-project-rollup.md  260707-v9-p4-responsive-mobile.md  260708-v11-p3-session-pool.md  (+33 more)
scripts/: demo-mode.sh
tests/: conftest.py  test_acceptance_criteria_review.py  test_action_gateway.py  test_actor_attribution_e2e.py  test_adjust_team_task_toctou.py  test_admin_pack.py  test_agent_isolation.py  test_agent_knowledge_form.py  test_agent_runtime_seam.py  test_agent_skills_dir.py  test_agent_telegram_bind.py  test_agents_admin_api.py  test_agents_register_existing.py  test_agentskills_io_format.py  test_amend_hash_excludes_system_inserted.py  test_amend_over_amend_reject.py  test_amend_pending_only_swap.py  test_amend_pic_aware_and_company_roundtrip.py  test_approval_gate_auto.py  test_approval_gate_interrupt.py  test_approval_gate_okr_resource.py  test_approval_store_actor.py  test_ask_agent_inbox.py  test_assign_auto_confirm_and_pic_wiring.py  test_audience_delivery.py  test_audience_prompts.py  test_audit_log.py  test_auto_approve_policy.py  test_automation_engine.py  test_automation_redline.py  test_automation_schema.py  test_budget_tracker.py  test_calendar_create_write.py  test_capability_block.py  test_capture_remember_cost_fold.py  test_capture_runtime_telemetry_seam.py  test_capture_store.py  test_capture_team_step_integration.py  test_capture_telemetry_pricing.py  test_channel_registry.py  (+201 more)
web/: vite.config.ts
web/src/: App.css  (+8 more)
(+582 files in other folders)
