[project]
name = "my-crew"
version = "0.1.0"
description = "my-crew — an autonomous AI crew (agent harness) for a one-person company: read real data, analyze, and act through a single safety gateway."
requires-python = ">=3.12"
dependencies = [
    # v6 M16: single-user session auth — bcrypt hashes the password, itsdangerous signs
    # the session cookie (Starlette's SessionMiddleware). Both small, well-audited.
    "bcrypt>=4.2",
    "croniter>=6.2.2",
    "fastapi>=0.136",
    "itsdangerous>=2.2",
    "jinja2>=3.1",
    # The tools-tier work loop runs `langchain.agents.create_agent` (community-standard tool loop);
    # the meta-package must be a base dep so it resolves without the optional `deep` extra.
    "langchain>=1.3,<1.4",
    "langchain-core>=1.4.8",
    "langchain-mcp-adapters==0.3.0",
    "langchain-openai>=0.3,<1.0",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langsmith>=0.8.18",
    "openai>=2.43.0",
    # psycopg[binary] bundles libpq so the Postgres path imports without a system
    # libpq install (M2-P8 — Postgres is opt-in; the binary wheel keeps the default
    # SQLite install self-contained on macOS/Linux without external libpq).
    "openpyxl>=3.1",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sse-starlette>=2.1",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
# v20.5: the DeepAgentRuntime backend (agent_runtime: deep_agent). EXPERIMENTAL — deepagents is
# Beta and pulls langchain-anthropic/google-genai; its shell runs ONLY inside a self-hosted
# Docker sandbox (never the host). Optional so the base install stays light + never needs Docker.
# Install with `uv sync --extra deep`; the `docker` SDK drives the local sandbox container.
deep = ["deepagents==0.6.12", "docker>=7.1"]

[project.scripts]
my-crew = "my_crew.entrypoints.mpm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["my_crew"]

[tool.ruff]
# snake_case Python, type hints on public fns (code-standards.md)
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
